# rs98-world-model

./: .gitignore  Cargo.toml
assets/cnvr/: kinds.cnvr  lib.cnvr  load.cnvr  patterns.cnvr  velocity.cnvr
assets/model/: arm.blend  arm.blend1  arm.glb  automine.blend  automine.blend1  automine.glb  autoprocessor.blend  autoprocessor.blend1  autoprocessor.glb  badge.glb  battery.blend  battery.blend1  battery.glb  baux.blend  baux.blend1  baux.glb  chip.blend  chip.blend1  chip.glb  controller.blend  controller.blend1  controller.glb  crt.blend  crt.blend1  fluorite.blend  fluorite.blend1  fluorite.glb  fuel.blend  fuel.blend1  fuel.glb  hypoxic.blend  hypoxic.blend1  hypoxic.glb  ingot.blend  ingot.blend1  ingot.glb  jarchi.blend  jarchi.blend1  jarchi.glb  lab-tile.blend  (+55 more)
assets/shaders/: post.wgsl
src/: act.rs  auto.rs  dir.rs  kind.rs  main.rs  pattern.rs  route.rs  test.rs  world.rs
src/draw/: app.rs  camera.rs  entities.rs  input.rs  mod.rs  post.rs  render.rs  test.rs  text.rs
src/model/: act.rs  auto.rs  bitfield.rs  dir.rs  force.rs  kind.rs  mod.rs  pattern.rs  route.rs  slot.rs  test.rs  world.rs
src/program/: event.rs  message.rs  mod.rs  program.rs  test.rs
