[package]
name = "rs98-world-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
bevy-inspector-egui = "0.16.6"
conniver = { path = "../conniver/" }

[profile.dev.package."*"]
opt-level = 3

[profile.release.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
